// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MovieAnnotation/> render movie annotation 1`] = `
<div
  className="movie-annotation"
>
  <img
    className="movie-annotation__image"
    src="https://image.tmdb.org/t/p/w500/path"
  />
  <h2
    className="movie-annotation__title"
  >
    title
  </h2>
  <button
    className="movie-annotation__rating"
    disabled={true}
  >
    9.9
  </button>
  <div
    className="movie-annotation__genre"
  >
    genre1
  </div>
  <div
    className="movie-annotation__release-date"
  >
    2012
  </div>
  <div
    className="movie-annotation__duration"
  >
    100 min
  </div>
  <h2
    className="movie-annotation__description"
  >
    overview
  </h2>
  <div
    className="movie-annotation__director"
  >
    Director: 
    director
  </div>
  <div
    className="movie-annotation__cast"
  >
    Cast: 
    cast
  </div>
</div>
`;

exports[`<MovieAnnotation/> render movie annotation 2`] = `
<div
  className="movie-annotation"
>
  <img
    className="movie-annotation__image"
    src="https://image.tmdb.org/t/p/w500/path"
  />
  <h2
    className="movie-annotation__title"
  >
    title
  </h2>
  <button
    className="movie-annotation__rating"
    disabled={true}
  >
    9.9
  </button>
  <div
    className="movie-annotation__genre"
  />
  <div
    className="movie-annotation__release-date"
  >
    2012
  </div>
  <div
    className="movie-annotation__duration"
  >
    0 min
  </div>
  <h2
    className="movie-annotation__description"
  >
    overview
  </h2>
  <div
    className="movie-annotation__director"
  >
    Director: 
    director
  </div>
  <div
    className="movie-annotation__cast"
  >
    Cast: 
    cast
  </div>
</div>
`;
